cmake_minimum_required (VERSION 2.6)

project(assure)

message("cxx Flags: " ${CMAKE_CXX_FLAGS})
message("CMAKE_BINARY_DIR: " ${CMAKE_BINARY_DIR})
message("RUNTIME_OUTPUT_DIRECTORY: " ${RUNTIME_OUTPUT_DIRECTORY})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_PROJECT_ROOT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_SRC_ROOT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src)
message("CMAKE_PROJECT_ROOT_DIRECTORY: " ${CMAKE_PROJECT_ROOT_DIRECTORY})
message("CMAKE_SRC_ROOT_DIRECTORY: " ${CMAKE_SRC_ROOT_DIRECTORY})

add_subdirectory(src)